Add external_source field to /api/imports endpoint (#165)
This change updates the /api/imports endpoint, so that an 'external_source' attribute is required and an optional 'external_source_url' field is accepted when uploading mismatch files via POST. The following modifications are included:

 * the ImportMeta model is updated
 * a database migration file is created
 * controller actions and validation rules are modified
 * tests are adjusted
 * documentation and API spec are updated.

Bug: T293763
