# docs/mismatchfinder-api-spec.yml
@@ -89,12 +89,18 @@ paths:
             schema:
               type: object
               properties:
-                mismatchFile:
+                mismatch_file:
                   type: string
                   format: binary
                 description:
                   type: string
                   maxLength: 350
+                external_source:
+                  type: string
+                  maxLength: 100
+                external_source_url:
+                  type: string
+                  maxLength: 1500
                 expires:
                   type: string
                   format: date
